# just-prompt-py

./: .env.sample  .gitignore  .mcp.json  README.md  list_models.py  pyproject.toml
specs/: init-just-prompt.md
src/just_prompt/: __init__.py  __main__.py  server.py
src/just_prompt/atoms/llm_providers/: __init__.py  anthropic.py  gemini.py  openai.py
src/just_prompt/atoms/shared/: data_types.py
src/just_prompt/tests/atoms/llm_providers/: __init__.py  test_anthropic.py  test_gemini.py  test_openai.py
