[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "just-prompt"
version = "0.1.0"
description = "MCP server providing a unified interface for multiple LLM providers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.1",
    "openai>=1.1.0",
    "anthropic>=0.5.0",
    "google-generativeai>=0.3.0",
    "groq>=0.4.0",
    "ollama>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.275",
]

[project.scripts]
just-prompt = "just_prompt.__main__:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"] 